# EC-Diff

./: .gitignore  README.md  extract_facts.py  generate_all.sh  smt2_to_souffle.py  test_souffle.sh
sastest/: README.md  run_all.sh  testDir-small.sh
sastest/benchmarks/: README.md  clean.sh  dirAdd.sh
sastest/benchmarks/account/: README.md  main1.c  main2.c
sastest/benchmarks/apache-21287/: main1.c  main2.c
sastest/benchmarks/apache-25520/: README.md  main1.c  main2.c
sastest/benchmarks/barrier-vf/: main1.c  main2.c
sastest/benchmarks/boop-simple-vf/: main1.c  main2.c
sastest/benchmarks/case1/: README.md  main1.c  main2.c
sastest/benchmarks/case2/: main1.c  main2.c
sastest/benchmarks/case3/: main1.c  main2.c
sastest/benchmarks/case4/: main1.c  main2.c
sastest/benchmarks/cherokee/: README.md  main1.c  main2.c
sastest/benchmarks/counter-seq/: README.md  main1.c  main2.c
src/: CMakeLists.txt
src/diffDep/: CMakeLists.txt  diffDep.cpp
src/diffDep/utils/: utils.cpp  utils.h  z3_utils.cpp  z3_utils.h
test/: exports.sh  general_rules-after.smt2  general_rules-before.smt2  makeTable-large.sh  makeTable-small.sh  mayhb_single.sh  rank1_rules.smt2  rank2_rules.smt2  rank3_rules.smt2  run_all-large.sh  run_all-mayHb.sh  run_all-small.sh  run_all_py.sh  run_single.sh  testDir-large.sh  testDir-small.sh
test/benchmarks/: README.md  clean.sh  dirAdd.sh
test/queries/: check.smt2  mayHbP1.smt2  mayHbP2.smt2  mustHbP1.smt2  mustHbP2.smt2  p1-p2-rank1.smt2  p1-p2-rank2.smt2  p1-p2-rank3.smt2  p2-p1-rank1.smt2  p2-p1-rank2.smt2  p2-p1-rank3.smt2
(+1939 files in other folders)
